--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "zendframework/zend-mail": "^2.3",
         "symfony/options-resolver": "^3.3",
         "psr/log": "^1.0",
-        "thefox/network": "^1.0"
+        "thefox/network": "^1.0",
+        "php-mime-mail-parser/php-mime-mail-parser": "^2.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
